<resources>
    <string name="app_name">TP2-CalculIMC</string>
    <string name="textViewPoids">Déterminez votre poids:</string>
    <string name="textViewTaille">Déterminez votre taille:</string>
    <string name="result2">Vous devez appuyer sur le bouton "Calculer l'IMC" pour obtenir un résultat</string>
    <string name="hintPoids">Poids:</string>
    <string name="hintTaille">Taille:</string>
    <string name="optionMetre">Mètre</string>
    <string name="optionCentimetre">Centimètre</string>
    <string name="commentaire">Commentaire</string>
    <string name="calcul">Calculer l\'IMC</string>
    <string name="reset">Reset</string>
    <string name="result1">Résultat</string>
    <string name="taillePos">La taille doit être positive</string>
    <string name="poidsPos">Le poids doit être positf</string>
    <string name="textRes">Votre IMC est</string>
    <string name="famine">famine</string>
    <string name="maigreur">maigreur</string>
    <string name="corpulence_normale">corpulence normale</string>
    <string name="surpoids">surpoids</string>
    <string name="obesite_modere">obésité modérée</string>
    <string name="obesite_severe">obésité sévère</string>
    <string name="obesite_massive">obésité morbide ou massive</string>
    <string name="unite_non_choisie">Veuillez choisir l\'unité pour la taille</string>
    <string name="poids_null">Veuillez entrer le poids</string>
    <string name="taille_null">Veuillez entrer la taille</string>
</resources>
